Full API support on both models